--- a/css/main.css
+++ b/css/main.css
@@ -59,15 +59,6 @@ img {
   padding-bottom: 94px;
 }
 
-.section-title {
-  margin-bottom: 50px;
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 1.17;
-  text-align: center;
-  letter-spacing: 0.03em;
-}
-
 .container {
   width: 1200px;
   margin: 0 auto;
@@ -89,6 +80,15 @@ img {
 
 .logo-web {
   color: var(--accent-color);
+}
+
+.section-title {
+  margin-bottom: 50px;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.17;
+  text-align: center;
+  letter-spacing: 0.03em;
 }
 
 .backdrop {
@@ -231,22 +231,6 @@ img {
   color: rgba(117, 117, 117, 0.5);
 }
 
-.form-label-policy::before {
-  content: '';
-  margin-right: 7px;
-  display: block;
-  width: 16px;
-  height: 15px;
-  cursor: pointer;
-  border-radius: 1px;
-  background-image: url("../images/backgroundicon/check.svg");
-}
-
-.form-input-policy:checked + .form-label-policy::before {
-  background-color: var(--accent-color);
-  background-image: url("../images/backgroundicon/icon-check.svg");
-}
-
 .form-label-policy {
   margin-bottom: 30px;
   display: flex;
@@ -258,8 +242,24 @@ img {
   color: var(--secondary-color);
 }
 
+.form-label-policy::before {
+  content: '';
+  margin-right: 7px;
+  display: block;
+  width: 16px;
+  height: 15px;
+  cursor: pointer;
+  border-radius: 1px;
+  background-image: url("../images/backgroundicon/check.svg");
+}
+
 .form-input-policy:focus + .form-label-policy::before {
   box-shadow: 0 0 0 1px var(--accent-color);
+}
+
+.form-input-policy:checked + .form-label-policy::before {
+  background-color: var(--accent-color);
+  background-image: url("../images/backgroundicon/icon-check.svg");
 }
 
 .form-link-policy {
@@ -288,13 +288,13 @@ img {
   justify-content: center;
 }
 
-.social-item:not(:last-child) {
-  margin-right: 10px;
-}
-
 .social-item {
   width: 44px;
   height: 44px;
+}
+
+.social-item:not(:last-child) {
+  margin-right: 10px;
 }
 
 .social-icon {
@@ -313,8 +313,7 @@ img {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.social-link:hover,
-.social-link:focus {
+.social-link:hover, .social-link:focus {
   background-color: var(--accent-color);
   fill: #ffffff;
   outline: none;
@@ -347,12 +346,6 @@ img {
   margin-right: 50px;
 }
 
-.nav-link:hover,
-.nav-link:focus {
-  color: var(--accent-color);
-  outline: none;
-}
-
 .nav-link {
   display: block;
   padding-top: 32px;
@@ -363,6 +356,11 @@ img {
   letter-spacing: 0.02em;
   color: var(--main-text-color);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.nav-link:hover, .nav-link:focus {
+  color: var(--accent-color);
+  outline: none;
 }
 
 .active-link {
@@ -412,8 +410,7 @@ img {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.header-contact-link:hover,
-.header-contact-link:focus {
+.header-contact-link:hover, .header-contact-link:focus {
   color: var(--accent-color);
   fill: var(--accent-color);
   outline: none;
@@ -614,8 +611,7 @@ img {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.clients-link:hover,
-.clients-link:focus {
+.clients-link:hover, .clients-link:focus {
   fill: var(--accent-color);
   outline: none;
   border: 1px solid var(--accent-color);
@@ -761,8 +757,7 @@ img {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.button-filter:hover,
-.button-filter:focus {
+.button-filter:hover, .button-filter:focus {
   color: #ffffff;
   background-color: var(--accent-color);
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
@@ -788,8 +783,7 @@ img {
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.projects-link:hover,
-.projects-link:focus {
+.projects-link:hover, .projects-link:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
   outline: none;
 }
