--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -10,8 +10,8 @@
   letter-spacing: 0.03em;
 
   color: #000000;
-}
 
-.logo-web {
-  color: var(--accent-color);
+  &-web {
+    color: var(--accent-color);
+  }
 }
