--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -31,20 +31,20 @@
   width: 18px;
   height: 18px;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.modal-close-button:hover > .close-icon,
-.modal-close-button:focus > .close-icon {
-  fill: var(--accent-color);
+  .modal-close-button:hover > &,
+  .modal-close-button:focus > & {
+    fill: var(--accent-color);
+  }
 }
 
 .is-hidden {
   opacity: 0;
   pointer-events: none;
-}
 
-.is-hidden .modal {
-  transform: translate(-50%, -50%) scale(0.5);
+  & .modal {
+    transform: translate(-50%, -50%) scale(0.5);
+  }
 }
 
 .form-title {
@@ -67,11 +67,11 @@
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.form-input:focus {
-  outline: none;
-  border-color: var(--accent-color);
+  &:focus {
+    outline: none;
+    border-color: var(--accent-color);
+  }
 }
 
 .form-label {
@@ -80,10 +80,10 @@
   letter-spacing: 0.01em;
 
   color: var(--secondary-color);
-}
 
-.form-label:not(:first-child) {
-  margin-top: 10px;
+  &:not(:first-child) {
+    margin-top: 10px;
+  }
 }
 
 .form-input-wrapper {
@@ -100,10 +100,10 @@
   left: 12px;
   transform: translateY(-50%);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.form-input:focus + .form-icon {
-  fill: var(--accent-color);
+  .form-input:focus + & {
+    fill: var(--accent-color);
+  }
 }
 
 .form-comment {
@@ -116,34 +116,18 @@
   border-radius: 4px;
   resize: none;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.form-comment:focus {
-  outline: none;
-  border-color: var(--accent-color);
-}
+  &:focus {
+    outline: none;
+    border-color: var(--accent-color);
+  }
 
-.form-comment::placeholder {
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.01em;
-  color: rgba(117, 117, 117, 0.5);
-}
-
-.form-label-policy::before {
-  content: '';
-  margin-right: 7px;
-  display: block;
-  width: 16px;
-  height: 15px;
-  cursor: pointer;
-  border-radius: 1px;
-  background-image: url('../images/backgroundicon/check.svg');
-}
-
-.form-input-policy:checked + .form-label-policy::before {
-  background-color: var(--accent-color);
-  background-image: url('../images/backgroundicon/icon-check.svg');
+  &::placeholder {
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.01em;
+    color: rgba(117, 117, 117, 0.5);
+  }
 }
 
 .form-label-policy {
@@ -155,9 +139,26 @@
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: var(--secondary-color);
-}
-.form-input-policy:focus + .form-label-policy::before {
-  box-shadow: 0 0 0 1px var(--accent-color);
+
+  &::before {
+    content: '';
+    margin-right: 7px;
+    display: block;
+    width: 16px;
+    height: 15px;
+    cursor: pointer;
+    border-radius: 1px;
+    background-image: url('../images/backgroundicon/check.svg');
+
+    .form-input-policy:focus + & {
+      box-shadow: 0 0 0 1px var(--accent-color);
+    }
+
+    .form-input-policy:checked + & {
+      background-color: var(--accent-color);
+      background-image: url('../images/backgroundicon/icon-check.svg');
+    }
+  }
 }
 
 .form-link-policy {
