--- a/sass/components/_social-list.scss
+++ b/sass/components/_social-list.scss
@@ -3,13 +3,13 @@
   justify-content: center;
 }
 
-.social-item:not(:last-child) {
-  margin-right: 10px;
-}
-
 .social-item {
   width: 44px;
   height: 44px;
+
+  &:not(:last-child) {
+    margin-right: 10px;
+  }
 }
 .social-icon {
   width: 20px;
@@ -27,11 +27,11 @@
 
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.social-link:hover,
-.social-link:focus {
-  background-color: var(--accent-color);
-  fill: #ffffff;
-  outline: none;
+  &:hover,
+  &:focus {
+    background-color: var(--accent-color);
+    fill: #ffffff;
+    outline: none;
+  }
 }
