--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -55,11 +55,11 @@
   background-color: rgba(255, 255, 255, 0.1);
   fill: #ffffff;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.footer .social-link:hover {
-  background-color: var(--accent-color);
-  outline: none;
+  &:hover {
+    background-color: var(--accent-color);
+    outline: none;
+  }
 }
 
 .wrapper-subscribe {
@@ -78,14 +78,14 @@
   border-radius: 4px;
   background-color: transparent;
   color: #ffffff;
-}
 
-.subscribe-input::placeholder {
-  font-size: 16px;
-  line-height: 1.25;
-  letter-spacing: 0.03em;
+  &::placeholder {
+    font-size: 16px;
+    line-height: 1.25;
+    letter-spacing: 0.03em;
 
-  color: rgba(255, 255, 255, 0.6);
+    color: rgba(255, 255, 255, 0.6);
+  }
 }
 
 .subscribe-submit {
