--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -25,12 +25,6 @@
   margin-right: 50px;
 }
 
-.nav-link:hover,
-.nav-link:focus {
-  color: var(--accent-color);
-  outline: none;
-}
-
 .nav-link {
   display: block;
   padding-top: 32px;
@@ -43,24 +37,30 @@
 
   color: var(--main-text-color);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  &:hover,
+  &:focus {
+    color: var(--accent-color);
+    outline: none;
+  }
 }
 
 .active-link {
   position: relative;
   color: var(--accent-color);
-}
 
-.active-link::after {
-  content: '';
+  &::after {
+    content: '';
 
-  position: absolute;
-  left: 0;
-  bottom: 0;
+    position: absolute;
+    left: 0;
+    bottom: 0;
 
-  display: block;
-  width: 100%;
-  height: 4px;
-  background-color: var(--accent-color);
+    display: block;
+    width: 100%;
+    height: 4px;
+    background-color: var(--accent-color);
+  }
 }
 
 .header-contact {
@@ -70,10 +70,10 @@
 .contact-item {
   display: flex;
   align-items: center;
-}
 
-.contact-item:not(:last-child) {
-  margin-right: 50px;
+  &:not(:last-child) {
+    margin-right: 50px;
+  }
 }
 
 .contact-icon {
@@ -96,11 +96,11 @@
 
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.header-contact-link:hover,
-.header-contact-link:focus {
-  color: var(--accent-color);
-  fill: var(--accent-color);
-  outline: none;
+  &:hover,
+  &:focus {
+    color: var(--accent-color);
+    fill: var(--accent-color);
+    outline: none;
+  }
 }
