--- a/sass/layout/_our-clients.scss
+++ b/sass/layout/_our-clients.scss
@@ -22,11 +22,11 @@
 
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.clients-link:hover,
-.clients-link:focus {
-  fill: var(--accent-color);
-  outline: none;
-  border: 1px solid var(--accent-color);
+  &:hover,
+  &:focus {
+    fill: var(--accent-color);
+    outline: none;
+    border: 1px solid var(--accent-color);
+  }
 }
