--- a/sass/main.scss
+++ b/sass/main.scss
@@ -5,6 +5,7 @@
 @import './base/container';
 
 @import './components/logo';
+@import './components/section-title';
 @import './components/backdrop';
 @import './components/modal';
 @import './components/social-list';
