--- a/css/main.css
+++ b/css/main.css
@@ -17,6 +17,22 @@
   overflow: hidden;
 }
 
+.form-button, .hero-button {
+  min-width: 200px;
+  padding: 10px 32px;
+  border-radius: 4px;
+  border: none;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
+  text-align: center;
+  letter-spacing: 0.06em;
+  cursor: pointer;
+  outline: none;
+  color: #ffffff;
+  background-color: var(--accent-color);
+}
+
 body {
   font-family: var(--main-font);
   color: var(--main-text-color);
@@ -268,19 +284,6 @@ img {
 
 .form-button {
   align-self: center;
-  min-width: 200px;
-  padding: 10px 32px;
-  border-radius: 4px;
-  border: none;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.87;
-  text-align: center;
-  letter-spacing: 0.06em;
-  cursor: pointer;
-  outline: none;
-  color: #ffffff;
-  background-color: var(--accent-color);
 }
 
 .social-list {
@@ -350,10 +353,10 @@ img {
   display: block;
   padding-top: 32px;
   padding-bottom: 32px;
-  font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
-  letter-spacing: 0.02em;
+  letter-spacing: 0.03em;
+  font-weight: 500;
   color: var(--main-text-color);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -401,10 +404,10 @@ img {
   align-items: center;
   padding-top: 32px;
   padding-bottom: 32px;
-  font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
-  letter-spacing: 0.02em;
+  letter-spacing: 0.03em;
+  font-weight: 500;
   color: var(--secondary-color);
   fill: #757575;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -435,28 +438,12 @@ img {
   max-width: 696px;
   margin: 0 auto;
   margin-bottom: 30px;
-  font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
-  letter-spacing: 0.06em;
+  letter-spacing: 0.03em;
+  font-weight: 900;
   text-transform: uppercase;
   color: #ffffff;
-}
-
-.hero-button {
-  min-width: 200px;
-  padding: 10px 32px;
-  border-radius: 4px;
-  border: none;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.87;
-  text-align: center;
-  letter-spacing: 0.06em;
-  cursor: pointer;
-  outline: none;
-  color: #ffffff;
-  background-color: var(--accent-color);
 }
 
 .section-advadvantages {
@@ -503,10 +490,10 @@ img {
 
 .advantages-title {
   margin-bottom: 10px;
-  font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.03em;
+  font-weight: 700;
   text-transform: uppercase;
 }
 
@@ -514,6 +501,7 @@ img {
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
+  font-weight: 400;
   color: var(--secondary-color);
 }
 
@@ -543,8 +531,9 @@ img {
 .wawd-title {
   font-size: 14px;
   line-height: 1.14;
-  text-align: center;
   letter-spacing: 0.03em;
+  font-weight: 400;
+  text-align: center;
   text-transform: uppercase;
   color: #ffffff;
 }
@@ -563,10 +552,11 @@ img {
   flex-basis: calc(100% / 4 - 30px);
   margin-left: 30px;
   margin-top: 30px;
+  text-align: center;
   font-size: 16px;
   line-height: 1.19;
-  text-align: center;
   letter-spacing: 0.03em;
+  font-weight: 400;
   background: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
@@ -644,6 +634,7 @@ img {
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
+  font-weight: 400;
 }
 
 .footer-address {
@@ -661,10 +652,10 @@ img {
 .join {
   display: inline-block;
   margin-bottom: 20px;
-  font-weight: bold;
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.03em;
+  font-weight: 700;
   text-transform: uppercase;
   color: #ffffff;
 }
@@ -704,6 +695,7 @@ img {
   font-size: 16px;
   line-height: 1.25;
   letter-spacing: 0.03em;
+  font-weight: 400;
   color: rgba(255, 255, 255, 0.6);
 }
 
@@ -711,14 +703,13 @@ img {
   height: 50px;
   min-width: 200px;
   display: flex;
-  /* justify-content: center; */
   align-items: center;
   padding: 10px 29px;
   border-radius: 4px;
-  font-weight: 700;
   font-size: 16px;
-  line-height: 1.87;
-  letter-spacing: 0.06em;
+  line-height: 1.88;
+  letter-spacing: 0.03em;
+  font-weight: 700;
   cursor: pointer;
   outline: none;
   color: #ffffff;
@@ -747,11 +738,11 @@ img {
   padding: 6px 22px;
   border: none;
   border-radius: 4px;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.62;
   text-align: center;
+  font-size: 16px;
+  line-height: 1.63;
   letter-spacing: 0.03em;
+  font-weight: 500;
   cursor: pointer;
   background-color: #f5f4fa;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -805,6 +796,7 @@ img {
   font-size: 18px;
   line-height: 1.56;
   letter-spacing: 0.03em;
+  font-weight: 400;
   color: #ffffff;
   background-color: rgba(33, 150, 243, 0.9);
 }
@@ -821,10 +813,10 @@ img {
 
 .project-title {
   margin-bottom: 4px;
-  font-weight: 700;
   font-size: 18px;
   line-height: 2;
-  letter-spacing: 0.06em;
+  letter-spacing: 0.03em;
+  font-weight: 700;
   color: var(--main-text-color);
 }
 
