--- a/sass/layout/_about.scss
+++ b/sass/layout/_about.scss
@@ -23,10 +23,8 @@
   background: rgba(47, 48, 58, 0.8);
 }
 .wawd-title {
-  font-size: 14px;
-  line-height: 1.14;
+  @include font(14px, 16px, 0.03em);
   text-align: center;
-  letter-spacing: 0.03em;
   text-transform: uppercase;
 
   color: #ffffff;
