--- a/sass/layout/_advantages.scss
+++ b/sass/layout/_advantages.scss
@@ -41,16 +41,11 @@
 
 .advantages-title {
   margin-bottom: 10px;
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.03em;
+  @include font(14px, 16px, 0.03em, 700);
   text-transform: uppercase;
 }
 
 .advantages-text {
-  font-size: 14px;
-  line-height: 1.71;
-  letter-spacing: 0.03em;
+  @include font(14px, 24px, 0.03em);
   color: var(--secondary-color);
 }
