--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -30,10 +30,7 @@
   padding-top: 32px;
   padding-bottom: 32px;
 
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
+  @include font(14px, 16px, 0.02em, 500);
 
   color: var(--main-text-color);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -86,10 +83,7 @@
   padding-top: 32px;
   padding-bottom: 32px;
 
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
+  @include font(14px, 16px, 0.02em, 500);
 
   color: var(--secondary-color);
   fill: #757575;
