--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -22,29 +22,12 @@
   margin: 0 auto;
   margin-bottom: 30px;
 
-  font-weight: 900;
-  font-size: 44px;
-  line-height: 1.36;
-  letter-spacing: 0.06em;
+  @include font(44px, 60px, 0.06em, 900);
   text-transform: uppercase;
 
   color: #ffffff;
 }
 
 .hero-button {
-  min-width: 200px;
-  padding: 10px 32px;
-  border-radius: 4px;
-  border: none;
-
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.87;
-  text-align: center;
-  letter-spacing: 0.06em;
-  cursor: pointer;
-  outline: none;
-
-  color: #ffffff;
-  background-color: var(--accent-color);
+  @extend %button;
 }
