--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -12,11 +12,9 @@
   border: none;
   border-radius: 4px;
 
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.62;
   text-align: center;
-  letter-spacing: 0.03em;
+
+  @include font(16px, 26px, 0.03em, 500);
   cursor: pointer;
 
   background-color: #f5f4fa;
@@ -76,9 +74,7 @@
 
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-  font-size: 18px;
-  line-height: 1.56;
-  letter-spacing: 0.03em;
+  @include font(18px, 28px, 0.03em);
 
   color: #ffffff;
   background-color: rgba(33, 150, 243, 0.9);
@@ -95,10 +91,7 @@
 }
 .project-title {
   margin-bottom: 4px;
-  font-weight: 700;
-  font-size: 18px;
-  line-height: 2;
-  letter-spacing: 0.06em;
+  @include font(18px, 36px, 0.06em, 700);
   color: var(--main-text-color);
 }
 
