--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -10,7 +10,7 @@
   background-color: #ffffff;
 }
 
-.modal-close-button {
+.modal__close-button {
   position: absolute;
   top: 8px;
   right: 8px;
@@ -27,13 +27,13 @@
   cursor: pointer;
 }
 
-.close-icon {
+.modal__close-icon {
   width: 18px;
   height: 18px;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-  .modal-close-button:hover > &,
-  .modal-close-button:focus > & {
+  .modal__close-button:hover > &,
+  .modal__close-button:focus > & {
     fill: var(--accent-color);
   }
 }
@@ -47,7 +47,7 @@
   }
 }
 
-.form-title {
+.modal__title {
   font-size: 20px;
   line-height: 1.15;
   text-align: center;
@@ -60,7 +60,7 @@
   margin-top: 12px;
 }
 
-.form-input {
+.form__input {
   width: 100%;
   height: 40px;
   padding-left: 42px;
@@ -74,7 +74,7 @@
   }
 }
 
-.form-label {
+.form__label {
   font-size: 12px;
   line-height: 1.17;
   letter-spacing: 0.01em;
@@ -86,13 +86,13 @@
   }
 }
 
-.form-input-wrapper {
+.form__input-wrapper {
   position: relative;
   display: block;
   margin-top: 4px;
 }
 
-.form-icon {
+.form__icon {
   width: 18px;
   height: 18px;
   position: absolute;
@@ -101,12 +101,12 @@
   transform: translateY(-50%);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-  .form-input:focus + & {
+  .form__input:focus + & {
     fill: var(--accent-color);
   }
 }
 
-.form-comment {
+.form__comment {
   width: 100%;
   height: 120px;
   margin-top: 4px;
@@ -130,7 +130,7 @@
   }
 }
 
-.form-label-policy {
+.form__label-policy {
   margin-bottom: 30px;
   display: flex;
   justify-content: center;
@@ -151,19 +151,19 @@
     background-image: url('../images/backgroundicon/check.svg');
   }
 }
-.form-input-policy:focus + .form-label-policy::before {
+.form__input-policy:focus + .form__label-policy::before {
   box-shadow: 0 0 0 1px var(--accent-color);
 }
-.form-input-policy:checked + .form-label-policy::before {
+.form__input-policy:checked + .form__label-policy::before {
   background-color: var(--accent-color);
   background-image: url('../images/backgroundicon/icon-check.svg');
 }
 
-.form-link-policy {
+.form__link-policy {
   color: var(--accent-color);
 }
 
-.form-button {
+.form__button {
   @extend %button;
   align-self: center;
 }
