--- a/sass/components/_social-list.scss
+++ b/sass/components/_social-list.scss
@@ -3,7 +3,7 @@
   justify-content: center;
 }
 
-.social-item {
+.social-list__item {
   width: 44px;
   height: 44px;
 
@@ -11,12 +11,12 @@
     margin-right: 10px;
   }
 }
-.social-icon {
+.social-list__icon {
   width: 20px;
   height: 20px;
 }
 
-.social-link {
+.social-list__link {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -33,5 +33,16 @@
     background-color: var(--accent-color);
     fill: #ffffff;
     outline: none;
+  }
+
+  .footer .social-list__link {
+    background-color: rgba(255, 255, 255, 0.1);
+    fill: #ffffff;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    &:hover {
+      background-color: var(--accent-color);
+      outline: none;
+    }
   }
 }
