--- a/sass/layout/_about.scss
+++ b/sass/layout/_about.scss
@@ -1,10 +1,10 @@
-.wawd {
+.about {
   display: flex;
   margin-left: -30px;
   margin-top: -30px;
 }
 
-.wawd-item {
+.about__item {
   position: relative;
   flex-basis: calc(100% / 3 - 30px);
   margin-left: 30px;
@@ -13,7 +13,7 @@
   z-index: -1;
 }
 
-.wawd-title-wrapper {
+.about__title-wrapper {
   position: absolute;
   bottom: 0;
   left: 0;
@@ -22,7 +22,7 @@
 
   background: rgba(47, 48, 58, 0.8);
 }
-.wawd-title {
+.about__title {
   @include font(14px, 16px, 0.03em);
   text-align: center;
   text-transform: uppercase;
