--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -2,18 +2,18 @@
   background: #2f303a;
 }
 
-.footer .container {
+.footer__container {
   padding-top: 60px;
   padding-bottom: 60px;
   display: flex;
   align-items: baseline;
 }
 
-.footer-wrapper {
+.footer__wrapper {
   margin-right: 70px;
 }
 
-.footer-wrapper > .logo {
+.logo--white {
   color: #ffffff;
   padding: 0;
   margin: 0;
@@ -25,19 +25,16 @@
   @include font(14px, 24px, 0.03em);
 }
 
-.footer-address {
-  color: #ffffff;
-}
-
-.address-item:not(:last-child) {
+.address__item:not(:last-child) {
   margin-bottom: 9px;
 }
 
-.footer-contact {
+.address__link {
   color: rgba(255, 255, 255, 0.6);
 }
 
-.join {
+.footer__title-join,
+.subscribe__title {
   display: inline-block;
   margin-bottom: 20px;
   @include font(14px, 16px, 0.03em, 700);
@@ -46,24 +43,13 @@
   color: #ffffff;
 }
 
-.footer .social-link {
-  background-color: rgba(255, 255, 255, 0.1);
-  fill: #ffffff;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-  &:hover {
-    background-color: var(--accent-color);
-    outline: none;
-  }
-}
-
-.wrapper-subscribe {
+.subscribe {
   margin-left: auto;
 }
-.subscribe {
+.subscribe__form {
   display: flex;
 }
-.subscribe-input {
+.subscribe__input {
   height: 50px;
   width: 358px;
   margin-right: 12px;
@@ -81,7 +67,7 @@
   }
 }
 
-.subscribe-submit {
+.subscribe__submit {
   height: 50px;
   min-width: 200px;
 
@@ -100,7 +86,7 @@
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 
-.send-icon {
+.subscribe__icon {
   margin-left: 10px;
   width: 24px;
   height: 24px;
