--- a/sass/layout/_our-clients.scss
+++ b/sass/layout/_our-clients.scss
@@ -1,17 +1,17 @@
-.clients-list {
+.clients {
   display: flex;
   margin-top: -30px;
   margin-left: -30px;
 }
 
-.clients-item {
+.clients__item {
   flex-basis: calc(100% / 6 - 30px);
   margin-top: 30px;
   margin-left: 30px;
   height: 90px;
 }
 
-.clients-link {
+.clients__link {
   display: flex;
   justify-content: center;
   align-items: center;
