--- a/sass/layout/_our-team.scss
+++ b/sass/layout/_our-team.scss
@@ -1,4 +1,4 @@
-.team-background {
+.section--team-background {
   background: #f5f4fa;
 }
 .team {
@@ -7,7 +7,7 @@
   margin-top: -30px;
 }
 
-.team-item {
+.team__item {
   flex-basis: calc(100% / 4 - 30px);
   margin-left: 30px;
   margin-top: 30px;
@@ -20,17 +20,17 @@
   border-radius: 0px 0px 4px 4px;
 }
 
-.team-item-content-wrapper {
+.team__content-wrapper {
   padding: 30px 32px;
 }
 
-.team-title {
+.team__title {
   margin-bottom: 10px;
   font-weight: 500;
   font-size: 16px;
 }
 
-.team-text {
+.team__text {
   color: var(--secondary-color);
   margin-bottom: 16px;
 }
