--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -4,10 +4,10 @@
   margin-bottom: 34px;
 }
 
-.filters-item:not(:last-child) {
+.filters__item:not(:last-child) {
   margin-right: 8px;
 }
-.button-filter {
+.filters__button {
   padding: 6px 22px;
   border: none;
   border-radius: 4px;
@@ -40,13 +40,13 @@
   margin-left: -30px;
 }
 
-.projects-item {
+.projects__item {
   flex-basis: calc(100% / 3 - 30px);
   margin-top: 30px;
   margin-left: 30px;
   border: 1px solid #eeeeee;
 }
-.projects-link {
+.projects__link {
   display: block;
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
@@ -58,12 +58,12 @@
   }
 }
 
-.projects-item-img-wrapper {
+.projects__img-wrapper {
   position: relative;
   overflow: hidden;
 }
 
-.overlay {
+.projects__overlay {
   position: absolute;
   top: 0;
   left: 0;
@@ -79,23 +79,23 @@
   color: #ffffff;
   background-color: rgba(33, 150, 243, 0.9);
 
-  .projects-link:hover &,
-  .projects-link:focus & {
+  .projects__link:hover &,
+  .projects__link:focus & {
     transform: translateY(0);
   }
 }
 
-.projects-item-content-wrapper {
+.projects__content-wrapper {
   padding: 20px 24px;
   border: 1px solid #eeeeee;
 }
-.project-title {
+.projects__title {
   margin-bottom: 4px;
   @include font(18px, 36px, 0.06em, 700);
   color: var(--main-text-color);
 }
 
-.project-type {
+.projects__type {
   font-size: 16px;
   line-height: 1.87;
   letter-spacing: 0.03em;
