--- a/css/main.css
+++ b/css/main.css
@@ -93,7 +93,7 @@ img {
   color: #000000;
 }
 
-.logo__web {
+.logo--web {
   color: var(--accent-color);
 }
 
@@ -285,26 +285,26 @@ img {
   align-self: center;
 }
 
-.social-list {
+.social__list {
   display: flex;
   justify-content: center;
 }
 
-.social-list__item {
+.social__item {
   width: 44px;
   height: 44px;
 }
 
-.social-list__item:not(:last-child) {
+.social__item:not(:last-child) {
   margin-right: 10px;
 }
 
-.social-list__icon {
+.social__icon {
   width: 20px;
   height: 20px;
 }
 
-.social-list__link {
+.social__link {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -315,19 +315,19 @@ img {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.social-list__link:hover, .social-list__link:focus {
+.social__link:hover, .social__link:focus {
   background-color: var(--accent-color);
   fill: #ffffff;
   outline: none;
 }
 
-.social-list__link .footer .social-list__link {
+.social__link .footer .social__link {
   background-color: rgba(255, 255, 255, 0.1);
   fill: #ffffff;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.social-list__link .footer .social-list__link:hover {
+.social__link .footer .social__link:hover {
   background-color: var(--accent-color);
   outline: none;
 }
@@ -351,8 +351,9 @@ img {
   display: flex;
 }
 
-.contact-list {
+.contact__list {
   display: flex;
+  margin-left: auto;
 }
 
 .navigation__item:not(:last-child) {
@@ -392,24 +393,20 @@ img {
   background-color: var(--accent-color);
 }
 
-.contact-list {
-  margin-left: auto;
-}
-
-.contact-list__item {
+.contact__item {
   display: flex;
   align-items: center;
 }
 
-.contact-list__item:not(:last-child) {
+.contact__item:not(:last-child) {
   margin-right: 50px;
 }
 
-.contact-list__icon {
+.contact__icon {
   margin-right: 10px;
 }
 
-.contact-list__link {
+.contact__link {
   display: flex;
   align-items: center;
   padding-top: 32px;
@@ -423,7 +420,7 @@ img {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.contact-list__link:hover, .contact-list__link:focus {
+.contact__link:hover, .contact__link:focus {
   color: var(--accent-color);
   fill: var(--accent-color);
   outline: none;
@@ -472,30 +469,13 @@ img {
   margin-top: 30px;
 }
 
-.advantages__item::before {
-  display: block;
-  content: '';
+.advantages__icon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   height: 120px;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-color: #f5f4fa;
   margin-bottom: 30px;
-}
-
-.icon-antenna::before {
-  background-image: url("../images/backgroundicon/antenna-1.svg");
-}
-
-.icon-clock::before {
-  background-image: url("../images/backgroundicon/clock-1.svg");
-}
-
-.icon-diagram::before {
-  background-image: url("../images/backgroundicon/diagram-1.svg");
-}
-
-.icon-astronaut::before {
-  background-image: url("../images/backgroundicon/astronaut-1.svg");
+  background-color: #f5f4fa;
 }
 
 .advantages__title {
@@ -529,7 +509,7 @@ img {
   z-index: -1;
 }
 
-.about__title-wrapper {
+.about__box {
   position: absolute;
   bottom: 0;
   left: 0;
@@ -548,11 +528,11 @@ img {
   color: #ffffff;
 }
 
-.section--team-background {
+.section__team {
   background: #f5f4fa;
 }
 
-.team {
+.team__list {
   display: flex;
   margin-left: -30px;
   margin-top: -30px;
@@ -587,7 +567,7 @@ img {
   margin-bottom: 16px;
 }
 
-.clients {
+.clients__list {
   display: flex;
   margin-top: -30px;
   margin-left: -30px;
@@ -751,7 +731,7 @@ img {
   outline: none;
 }
 
-.projects {
+.projects__list {
   display: flex;
   flex-wrap: wrap;
   margin-top: -30px;
@@ -802,7 +782,7 @@ img {
   transform: translateY(0);
 }
 
-.projects__content-wrapper {
+.projects__box {
   padding: 20px 24px;
   border: 1px solid #eeeeee;
 }
