--- a/sass/components/_social-list.scss
+++ b/sass/components/_social-list.scss
@@ -1,9 +1,9 @@
-.social-list {
+.social__list {
   display: flex;
   justify-content: center;
 }
 
-.social-list__item {
+.social__item {
   width: 44px;
   height: 44px;
 
@@ -11,12 +11,12 @@
     margin-right: 10px;
   }
 }
-.social-list__icon {
+.social__icon {
   width: 20px;
   height: 20px;
 }
 
-.social-list__link {
+.social__link {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -35,7 +35,7 @@
     outline: none;
   }
 
-  .footer .social-list__link {
+  .footer .social__link {
     background-color: rgba(255, 255, 255, 0.1);
     fill: #ffffff;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
