--- a/sass/layout/_our-team.scss
+++ b/sass/layout/_our-team.scss
@@ -1,7 +1,7 @@
-.section--team-background {
+.section__team {
   background: #f5f4fa;
 }
-.team {
+.team__list {
   display: flex;
   margin-left: -30px;
   margin-top: -30px;
