--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -33,7 +33,7 @@
   }
 }
 
-.projects {
+.projects__list {
   display: flex;
   flex-wrap: wrap;
   margin-top: -30px;
@@ -85,7 +85,7 @@
   }
 }
 
-.projects__content-wrapper {
+.projects__box {
   padding: 20px 24px;
   border: 1px solid #eeeeee;
 }
